// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given the TodoItem component when it is rendered should match the snapshot 1`] = `
<div
  class="list-group-item d-flex align-items-center"
>
  <app-checkbox-input-stub
    checked="true"
    class="ms-2"
    disabled="false"
  />
  <span
    class="todo-item-completed ms-4 custom-span"
  >
    title
  </span>
  <app-button-stub
    customclass="button,item__button--delete,btn-close,ms-auto"
    label=""
  />
</div>
`;

exports[`Given the TodoItem component when it is rendered should match the snapshot 2`] = `
<div
  class="list-group-item d-flex align-items-center"
>
  <app-checkbox-input-stub
    checked="false"
    class="ms-2"
    disabled="false"
  />
  <span
    class="ms-4 custom-span"
  >
    title
  </span>
  <app-button-stub
    customclass="button,item__button--delete,btn-close,ms-auto"
    label=""
  />
</div>
`;
